--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ endif()
 
 if(USE_WIDECHAR)
     find_library(CURSES_LIBRARY NAMES ncursesw cursesw curses HINTS /usr/lib)
+    find_library(TERMINFO_LIBRARY NAMES tinfow terminfo HINTS /usr/lib)
 
     # link to the wchar_t awared BSD libregex.a
     add_library(regex STATIC)
@@ -137,13 +138,14 @@ if(USE_WIDECHAR)
     target_link_libraries(nvi PRIVATE regex)
 else()
     find_library(CURSES_LIBRARY NAMES ncurses curses HINTS /usr/lib)
+    find_library(TERMINFO_LIBRARY NAMES tinfo terminfo HINTS /usr/lib)
     target_compile_options(nvi PRIVATE -Wno-pointer-sign)
 endif()
 
-target_link_libraries(nvi PRIVATE ${CURSES_LIBRARY})
+target_link_libraries(nvi PRIVATE ${CURSES_LIBRARY} ${TERMINFO_LIBRARY})
 
 if(USE_ICONV)
-    check_function_exists(__iconv ICONV_IN_LIBC)
+    check_function_exists(iconv ICONV_IN_LIBC)
     if(NOT ICONV_IN_LIBC)
         find_path(ICONV_INCLUDE_DIR iconv.h)
         find_library(ICONV_LIBRARY iconv)
@@ -172,6 +174,20 @@ if(USE_ICONV)
 
     target_include_directories(nvi PRIVATE ${ICONV_INCLUDE_DIR})
     target_link_libraries(nvi PRIVATE ${ICONV_LIBRARY})
+endif()
+
+check_function_exists(getprogname GETPROGNAME_IN_LIBC)
+check_function_exists(strlcpy STRLCPY_IN_LIBC)
+if(NOT GETPROGNAME_IN_LIBC OR NOT STRLCPY_IN_LIBC)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(LIBBSD libbsd-overlay)
+    add_definitions(${LIBBSD_CFLAGS})
+    target_link_libraries(nvi PRIVATE ${LIBBSD_LIBRARIES})
+endif()
+
+check_function_exists(dbopen DBOPEN_IN_LIBC)
+if(NOT DBOPEN_IN_LIBC)
+    target_link_libraries(nvi PRIVATE db1)
 endif()
 
 check_include_files(libutil.h HAVE_LIBUTIL_H)
