--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,9 @@ add_compile_options($<$<CONFIG:Debug>:-Wall>)
 add_compile_options($<$<CONFIG:Debug>:-Wno-parentheses>)
 add_compile_options($<$<CONFIG:Debug>:-Wno-uninitialized>)
 add_compile_options($<$<CONFIG:Debug>:-Wmissing-prototypes>)
-add_compile_options($<$<CONFIG:Debug>:-Wsystem-headers>)
+if (NOT APPLE)
+    add_compile_options($<$<CONFIG:Debug>:-Wsystem-headers>)
+endif()
 add_compile_options($<$<CONFIG:Release>:-Wuninitialized>)
 add_compile_options($<$<CONFIG:Release>:-Wno-dangling-else>)
 add_compile_options(-Wstack-protector -fstack-protector)
@@ -192,8 +194,18 @@ check_function_exists(dbopen DBOPEN_IN_LIBC)
 if(NOT DBOPEN_IN_LIBC)
     target_link_libraries(nvi PRIVATE db1)
 endif()
-find_path(DB_INCLUDE_DIR db.h PATH_SUFFIXES db1)
-target_include_directories(nvi PRIVATE ${DB_INCLUDE_DIR})
+if (APPLE)
+    # Avoid using an incompatible db.h installed to /usr/local (since this is
+    # part of the default search path on macOS)
+    set(DB_H_GUESS "${CMAKE_OSX_SYSROOT}/usr/include/db.h")
+    if (NOT EXISTS ${DB_H_GUESS})
+        message(FATAL_ERROR "Could not find db.h at the expected path (${DB_H_GUESS}).")
+    endif()
+    add_definitions("-DDB_H_ABS_PATH=<${DB_H_GUESS}>")
+else()
+    find_path(DB_INCLUDE_DIR db.h PATH_SUFFIXES db1)
+    target_include_directories(nvi PRIVATE ${DB_INCLUDE_DIR})
+endif()
 
 check_include_files(libutil.h HAVE_LIBUTIL_H)
 check_include_files(ncurses.h HAVE_NCURSES_H)
