--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ project(nvi2 C)
 
 include(CheckIncludeFiles)
 include(CheckFunctionExists)
+include(CheckSymbolExists)
 include(CheckStructHasMember)
 include(CheckCSourceCompiles)
 include(CheckCCompilerFlag)
@@ -131,6 +132,11 @@ check_function_exists(__b64_ntop RESOLV_IN_LIBC)
 if(NOT RESOLV_IN_LIBC)
     find_library(RESOLV_LIBRARY resolv)
     target_link_libraries(nvi PRIVATE ${RESOLV_LIBRARY})
+endif()
+
+check_symbol_exists(asprintf "stdio.h" ASPRINTF_IN_STDIO_H)
+if(NOT ASPRINTF_IN_STDIO_H)
+    target_compile_definitions(nvi PRIVATE _GNU_SOURCE)
 endif()
 
 if(USE_WIDECHAR)
