Compiler fixes for GCC, GNU libc, and Git ignore (#94)
* Check that the ‘-fcolor-diagnostics’ option to CC works

Some C compilers don't accept the -fcolor-diagnostics option:

cc: error: unrecognized command line option ‘-fcolor-diagnostics’

* Add -D_GNU_SOURCE compiler option for ‘asprintf’, ‘wcwidth’, etc.

_GNU_SOURCE implicitly defines _XOPEN_SOURCE_EXTENDED, _POSIX_SOURCE,
_POSIX_C_SOURCE, etc.

‘asprintf’ is a GNU extension in stdio.h, also available under *BSD.
This fixes warnings such as:

ex/ex_shell.c:51:6: warning: implicit declaration of function ‘asprintf’
did you mean ‘vsprintf’? [-Wimplicit-function-declaration]
   51 |  if (asprintf(&buf, "%s -i", O_STR(sp, O_SHELL)) == -1) {
      |      ^~~~~~~~
      |      vsprintf

‘wcwidth’ is POSIX.1-2001 and POSIX.1-2008. This fixes warnings such as:

common/key.h:25:29: warning: implicit declaration of function ‘wcwidth’
[-Wimplicit-function-declaration]
   25 | #define CHAR_WIDTH(sp, ch)  wcwidth(ch)
      |                             ^~~~~~~

* Rename CHAR_WIDTH to XCHAR_WIDTH

CHAR_WIDTH is defined in /usr/include/limits.h. This fixes:

common/key.h:25: warning: "CHAR_WIDTH" redefined
   25 | #define CHAR_WIDTH(sp, ch)  wcwidth(ch)
      |
/usr/include/limits.h:147: note: this is the location of the previous
definition
  147 | #  define CHAR_WIDTH 8
      |

* Undefine O_PATH if system headers already define it

O_PATH is defined in /usr/include/bits/fcntl-linux.h. This fixes:

common/options_def.h:44: warning: "O_PATH" redefined
   44 | #define O_PATH 43
      |
/usr/include/bits/fcntl-linux.h:150: note: this is the location of the
previous definition
  150 | # define O_PATH  __O_PATH /* Resolve pathname but do not open file.  */
      |

* Ignore files by the GNU Global source code tagging system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,21 @@ project(nvi2 C)
 
 include(CheckIncludeFiles)
 include(CheckFunctionExists)
+include(CheckSymbolExists)
 include(CheckStructHasMember)
 include(CheckCSourceCompiles)
+include(CheckCCompilerFlag)
 
 mark_as_advanced(CMAKE_INSTALL_PREFIX)
 
 option(USE_WIDECHAR "Enable wide character support" ON)
 option(USE_ICONV "Enable iconv support" ON)
 
-add_compile_options(-fcolor-diagnostics)
+check_c_compiler_flag(-fcolor-diagnostics USE_FCOLOR_DIAGNOSTICS)
+if(USE_FCOLOR_DIAGNOSTICS)
+    add_compile_options(-fcolor-diagnostics)
+endif()
+
 add_compile_options($<$<CONFIG:Debug>:-Wall>)
 add_compile_options($<$<CONFIG:Debug>:-Wno-parentheses>)
 add_compile_options($<$<CONFIG:Debug>:-Wno-uninitialized>)
@@ -126,6 +132,11 @@ check_function_exists(__b64_ntop RESOLV_IN_LIBC)
 if(NOT RESOLV_IN_LIBC)
     find_library(RESOLV_LIBRARY resolv)
     target_link_libraries(nvi PRIVATE ${RESOLV_LIBRARY})
+endif()
+
+check_symbol_exists(asprintf "stdio.h" ASPRINTF_IN_STDIO_H)
+if(NOT ASPRINTF_IN_STDIO_H)
+    target_compile_definitions(nvi PRIVATE _GNU_SOURCE)
 endif()
 
 if(USE_WIDECHAR)
